src/objects/Account_Watcher__c.object
<CustomObject>
    <description>The object contain analytics information in Account level which is going to support for Reports and Dashboards, such as communication</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Watchers</relationshipLabel>
        <relationshipName>Account_Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_14_days_num_of_calls__c</fullName>
        <label>Last 14 days num of calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_14_days_num_of_emails__c</fullName>
        <description>Last 14 days num of email</description>
        <inlineHelpText>Last 14 days num of email</inlineHelpText>
        <label>Last 14 days num of emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_days_num_of_calls__c</fullName>
        <description>Number of calls to any new clients in last 7 days</description>
        <inlineHelpText>Number of calls to any new clients in last 7 days</inlineHelpText>
        <label>Last 7 days num of calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_7_days_num_of_emails__c</fullName>
        <description>The number of emails sent to the clients in last 7 days</description>
        <inlineHelpText>The number of emails sent to the clients in last 7 days</inlineHelpText>
        <label>Last 7 days num of emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Product</description>
        <inlineHelpText>Account Product</inlineHelpText>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Account Watchers</relationshipLabel>
        <relationshipName>Account_Watchers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Watcher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AW-{000000}</displayFormat>
        <label>Account Watcher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Watchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>